Bug 1246215 - Console prevents let re-declaration even when first was an error; r=jryans,shu